--- a/modules/webprofiler/webprofiler.routing.yml
+++ b/modules/webprofiler/webprofiler.routing.yml
@@ -19,3 +19,19 @@ webprofiler.panel:
     _controller: '\Drupal\webprofiler\Controller\DashboardController::panel'
   requirements:
     _permission: 'view webprofiler toolbar'
+
+webprofiler.admin_list:
+  path: '/admin/reports/profiler/list'
+  defaults:
+    _controller: '\Drupal\webprofiler\Controller\ReportController::list'
+    _title: 'Webprofiler'
+  requirements:
+    _permission: 'access webprofiler'
+
+webprofiler.settings:
+  path: '/admin/config/development/devel/webprofiler'
+  defaults:
+    _form: 'Drupal\webprofiler\Form\SettingsForm'
+    _title: 'Webprofiler settings'
+  requirements:
+    _permission: 'access webprofiler'
