--- a/modules/webprofiler/webprofiler.services.yml
+++ b/modules/webprofiler/webprofiler.services.yml
@@ -59,6 +59,12 @@ services:
     class: Twig\Profiler\Profile
 
   # data collectors
+  webprofiler.drupal:
+    class: Drupal\webprofiler\DataCollector\DrupalDataCollector
+    arguments: [ '@redirect.destination' ]
+    tags:
+      - { name: data_collector, template: '@webprofiler/Collector/drupal.html.twig', id: 'drupal', title: 'Drupal', priority: 10 }
+
   webprofiler.request:
     class: Drupal\webprofiler\DataCollector\RequestDataCollector
     arguments: ['@controller_resolver']
